<resources>
	<string name="app_name">AfcsDemo</string>
	<string name="action_settings">Settings</string>

	<string name="ic_money">&#xe73f;</string>
	<string name="ic_settings">&#xe6ef;</string>
	<string name="ic_message">&#xe66b;</string>
	<string name="ic_right">&#xe624;</string>
	<string name="ic_back">&#xe677;</string>

	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>

	<string name="share">分享</string>
	<string name="camera">拍照</string>
	<string name="location">定位</string>
	<string name="news">新闻</string>
	<string name="scan">扫一扫</string>
</resources>
