<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

	<ScrollView
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@android:color/white">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<com.teaphy.archs.widget.PreImageView
				android:id="@+id/pivNews"
				android:layout_width="match_parent"
				android:layout_height="48dp"
				app:pivDesc="新闻"
				app:pivDescColor="@color/color72"
				app:pivDescEnd="6dp"
				app:pivDescSize="12"
				app:pivHeight="48dp"
				app:pivLogoHeight="24dp"
				app:pivLogoRes="@mipmap/ic_news"
				app:pivLogoStart="14dp"
				app:pivLogoWidth="24dp"
				app:pivRightEnd="14dp"
				app:pivRightHeight="20dp"
				app:pivRightRes="@mipmap/ic_right"
				app:pivRightWidth="20dp"
				app:pivTitle="@string/news"
				app:pivTitleColor="@color/color33"
				app:pivTitleSize="14"
				app:pivTitleStart="6dp"
				app:pivUnderLineColor="@color/color33"
				app:pivUnderLineVisible="true">

			</com.teaphy.archs.widget.PreImageView>

			<com.teaphy.archs.widget.PreImageView
				android:id="@+id/pivLocation"
				android:layout_width="match_parent"
				android:layout_height="48dp"
				app:pivDesc="定位"
				app:pivDescColor="@color/color72"
				app:pivDescEnd="6dp"
				app:pivDescSize="12"
				app:pivHeight="48dp"
				app:pivLogoHeight="24dp"
				app:pivLogoRes="@mipmap/ic_location"
				app:pivLogoStart="14dp"
				app:pivLogoWidth="24dp"
				app:pivRightEnd="14dp"
				app:pivRightHeight="20dp"
				app:pivRightRes="@mipmap/ic_right"
				app:pivRightWidth="20dp"
				app:pivTitle="@string/location"
				app:pivTitleColor="@color/color33"
				app:pivTitleSize="14"
				app:pivTitleStart="6dp"
				app:pivUnderLineColor="@color/color33"
				app:pivUnderLineEnd="14dp"
				app:pivUnderLineStart="14dp"
				app:pivUnderLineVisible="true">

			</com.teaphy.archs.widget.PreImageView>

			<com.teaphy.archs.widget.PreImageView
				android:id="@+id/camera_pre_view"
				android:layout_width="match_parent"
				android:layout_height="48dp"
				app:pivDesc="@string/camera"
				app:pivDescColor="@color/color72"
				app:pivDescEnd="6dp"
				app:pivDescSize="12"
				app:pivHeight="48dp"
				app:pivLogoHeight="24dp"
				app:pivLogoRes="@mipmap/ic_camera"
				app:pivLogoStart="14dp"
				app:pivLogoWidth="24dp"
				app:pivRightEnd="14dp"
				app:pivRightHeight="20dp"
				app:pivRightRes="@mipmap/ic_right"
				app:pivRightWidth="20dp"
				app:pivTitle="@string/camera"
				app:pivTitleColor="@color/color33"
				app:pivTitleSize="14"
				app:pivTitleStart="6dp"
				app:pivUnderLineColor="@color/color33"
				app:pivUnderLineEnd="14dp"
				app:pivUnderLineStart="14dp"
				app:pivUnderLineVisible="true"/>

			<com.teaphy.archs.widget.PreImageView
				android:id="@+id/scan_pre_view"
				android:layout_width="match_parent"
				android:layout_height="48dp"
				app:pivDesc="@string/scan"
				app:pivDescColor="@color/color72"
				app:pivDescEnd="6dp"
				app:pivDescSize="12"
				app:pivHeight="48dp"
				app:pivLogoHeight="24dp"
				app:pivLogoRes="@mipmap/ic_scan"
				app:pivLogoStart="14dp"
				app:pivLogoWidth="24dp"
				app:pivRightEnd="14dp"
				app:pivRightHeight="20dp"
				app:pivRightRes="@mipmap/ic_right"
				app:pivRightWidth="20dp"
				app:pivTitle="@string/scan"
				app:pivTitleColor="@color/color33"
				app:pivTitleSize="14"
				app:pivTitleStart="6dp"
				app:pivUnderLineColor="@color/color33"
				app:pivUnderLineEnd="14dp"
				app:pivUnderLineStart="14dp"
				app:pivUnderLineVisible="true"/>

			<com.teaphy.archs.widget.PreImageView
				android:layout_width="match_parent"
				android:layout_height="48dp"
				app:pivDesc="设置"
				app:pivDescColor="@color/color72"
				app:pivDescEnd="40dp"
				app:pivDescSize="12"
				app:pivHeight="48dp"
				app:pivLogoVisibility="false"
				app:pivRightVisible="false"
				app:pivTitle="@string/action_settings"
				app:pivTitleColor="@color/color33"
				app:pivTitleSize="14"
				app:pivTitleStart="44dp"
				app:pivUnderLineColor="@color/color33"
				app:pivUnderLineEnd="14dp"
				app:pivUnderLineStart="14dp"
				app:pivUnderLineVisible="true">

			</com.teaphy.archs.widget.PreImageView>

			<com.teaphy.archs.widget.PreIconFontView
				android:layout_width="match_parent"
				android:layout_height="48dp"
				app:pifvDesc="120元"
				app:pifvDescColor="@android:color/holo_red_dark"
				app:pifvDescEnd="10dp"
				app:pifvDescSize="12"
				app:pifvHeight="48dp"
				app:pifvLogo="@string/ic_money"
				app:pifvLogoColor="@android:color/holo_red_dark"
				app:pifvLogoSize="24"
				app:pifvLogoStart="14dp"
				app:pifvLogoVisibility="true"
				app:pifvLogoWidth="48dp"
				app:pifvRight="@string/ic_right"
				app:pifvRightColor="#bdbdbd"
				app:pifvRightEnd="14dp"
				app:pifvRightSize="16"
				app:pifvRightVisible="true"
				app:pifvRightWidth="16dp"
				app:pifvTitle="收入"
				app:pifvTitleColor="@color/color33"
				app:pifvTitleSize="14"
				app:pifvTitleStart="6dp"
				app:pifvUnderLineColor="@color/color72"
				app:pifvUnderLineVisible="true">

			</com.teaphy.archs.widget.PreIconFontView>

			<com.teaphy.archs.widget.PreIconFontView
				android:id="@+id/pifvIncome"
				android:layout_width="match_parent"
				android:layout_height="48dp"
				app:pifvDesc="120元"
				app:pifvDescColor="@android:color/holo_red_dark"
				app:pifvDescEnd="10dp"
				app:pifvDescSize="12"
				app:pifvHeight="48dp"
				app:pifvLogo="@string/ic_money"
				app:pifvLogoColor="@android:color/holo_red_dark"
				app:pifvLogoSize="24"
				app:pifvLogoStart="14dp"
				app:pifvLogoWidth="48dp"
				app:pifvRight="@string/ic_right"
				app:pifvRightColor="#bdbdbd"
				app:pifvRightEnd="14dp"
				app:pifvRightSize="14"
				app:pifvRightVisible="true"
				app:pifvRightWidth="16dp"
				app:pifvTitle="收入"
				app:pifvTitleColor="@color/color33"
				app:pifvTitleSize="14"
				app:pifvTitleStart="6dp"
				app:pifvUnderLineColor="@color/color72"
				app:pifvUnderLineEnd="14dp"
				app:pifvUnderLineStart="14dp"
				app:pifvUnderLineVisible="true">

			</com.teaphy.archs.widget.PreIconFontView>

			<com.teaphy.archs.widget.PreIconFontView
				android:layout_width="match_parent"
				android:layout_height="48dp"
				app:pifvDesc="120元"
				app:pifvDescColor="@android:color/holo_red_dark"
				app:pifvDescEnd="40dp"
				app:pifvDescSize="12"
				app:pifvHeight="48dp"
				app:pifvLogoVisibility="false"
				app:pifvRightVisible="false"
				app:pifvTitle="收入"
				app:pifvTitleColor="@color/color33"
				app:pifvTitleSize="14"
				app:pifvTitleStart="70dp"
				app:pifvUnderLineColor="@color/color72"
				app:pifvUnderLineEnd="14dp"
				app:pifvUnderLineStart="14dp"
				app:pifvUnderLineVisible="true">

			</com.teaphy.archs.widget.PreIconFontView>
		</LinearLayout>
	</ScrollView>
</layout>
